# feup-aeda

./: README.md
Practical Classes/aeda1920_fp01/Tests/: parque.cpp  parque.h
Practical Classes/aeda1920_fp02/Tests/: frota.cpp  frota.h
Practical Classes/aeda1920_fp03/Tests/: grafo.h
Practical Classes/aeda1920_fp05/Tests/: jogo.cpp
Practical Classes/aeda1920_fp06/Tests/: stackExt.h
Practical Classes/aeda1920_fp07/Tests/: jogo.h  tests.cpp
Practical Classes/aeda1920_fp09/Tests/: aposta.h
Practical Classes/aeda1920_fp10/Tests/: maquinaEmpacotar.cpp
Project/: CMakeLists.txt
aeda1920_fp02/Tests/: tests.cpp  veiculo.cpp  veiculo.h
aeda1920_fp03/Tests/: tests.cpp
aeda1920_fp04/Tests/: parque.cpp  parque.h  tests.cpp
aeda1920_fp06/Tests/: tests.cpp
aeda1920_fp07/Tests/: dicionario.cpp  dicionario.h  jogo.cpp
aeda1920_fp09/Tests/: aposta.cpp  jogador.cpp  jogador.h
aeda1920_fp10/Tests/: caixa.cpp
